# scheduler-web

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
compose/local/django/: Dockerfile  start.sh
scheduler-api/: pytest.ini  wsgi.py
scheduler-api/apps/schedules/: admin.py  apps.py  enums.py  models.py  serializers.py  urls.py  views.py
scheduler-api/apps/schedules/migrations/: 0001_initial.py  0002_delete_timeslotseries.py
scheduler-api/apps/schedules/services/: __init__.py  schedule_service.py
scheduler-api/apps/users/: app.py  urls.py
scheduler-api/apps/users/migrations/: 0003_alter_user_first_name.py
scheduler-api/config/: common.py  local.py  test.py
scheduler-api/urls/: __init__.py  development_urls.py  swagger_urls.py
